--- a/eenden_app/pubspec.yaml
+++ b/eenden_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.5.3
   flutter_markdown: ^0.7.7
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
